--- a/src/particles/CMakeLists.txt
+++ b/src/particles/CMakeLists.txt
@@ -1,7 +1,9 @@
 target_sources(HiPACE
   PRIVATE
     BeamParticleContainer.H
+    BeamParticleContainer.cpp
     PlasmaParticleContainer.H
+    PlasmaParticleContainer.cpp
     MultiBeamParticleContainer.H
     MultiBeamParticleContainer.cpp
     MultiPlasmaParticleContainer.H
