add beam particles in the simulation. Particle IO still not readable

--- a/src/particles/CMakeLists.txt
+++ b/src/particles/CMakeLists.txt
@@ -2,4 +2,6 @@ target_sources(HiPACE
   PRIVATE
     MultiBeamParticleContainer.cpp
     MultiPlasmaParticleContainer.cpp
+    BeamParticleContainer.cpp
+    BeamParticleContainerInit.cpp
 )
