also have plasma particles in the simulation

--- a/src/particles/CMakeLists.txt
+++ b/src/particles/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(HiPACE
   PRIVATE
     BeamParticleContainer.cpp
-    PlasmaParticleContainer.cpp
     BeamParticleContainerInit.cpp
+    PlasmaParticleContainer.cpp
+    PlasmaParticleContainerInit.cpp
 )
