--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,17 +122,24 @@ include(CTest)
 if(BUILD_TESTING)
     enable_testing()
 
-    configure_mpiexec(1)  # one rank in MPI_TEST_EXE
-    add_test(NAME Main.Examples.1Rank.Inputs
-             COMMAND ${MPI_TEST_EXE} $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}/examples/inputs
-             WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
-    )
+    if(NOT ENABLE_MPI)
+        add_test(NAME Main.Examples.Serial.Inputs
+                 COMMAND $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}/examples/inputs
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
+    else()
+        configure_mpiexec(1)  # one rank in MPI_TEST_EXE
+        add_test(NAME Main.Examples.1Rank.Inputs
+                 COMMAND ${MPI_TEST_EXE} $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}/examples/inputs
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
 
-    configure_mpiexec(2)  # two ranks in MPI_TEST_EXE
-    add_test(NAME Main.Examples.2Ranks.Inputs
-             COMMAND ${MPI_TEST_EXE} $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}/examples/inputs
-             WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
-    )
+        configure_mpiexec(2)  # two ranks in MPI_TEST_EXE
+        add_test(NAME Main.Examples.2Ranks.Inputs
+                 COMMAND ${MPI_TEST_EXE} $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}/examples/inputs
+                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
+    endif()
 endif()
 
 
