--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -2,9 +2,9 @@ name: macos
 
 on: [push, pull_request]
 
+jobs:
 # enable again when we open-source (free core-hours for GH Actions)
 #
-#jobs:
 #  macos_appleclang_cxx14_ompi:
 #    name: AppleClang@11.0 C++14 OMPI
 #    runs-on: macos-latest
