--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,13 +60,8 @@ make_third_party_includes_system(AMReX::amrex AMReX)
 
 # FFTW (non-GPU) and cuFFT (GPU) - or both wrapped via AMReX?
 # external library: FFTW (optional)
-
 find_package(PkgConfig REQUIRED QUIET)
-pkg_check_modules(fftw3 IMPORTED_TARGET fftw3)
-add_library(fftw3 INTERFACE)
-target_link_libraries(fftw3 INTERFACE PkgConfig::fftw3)
-
-# target_link_libraries(<your target> <PUBLIC|PRIVATE|INTERFACE> fftw3)
+pkg_check_modules(fftw3 REQUIRED IMPORTED_TARGET fftw3)
 
 # openPMD-api
 
@@ -98,6 +93,7 @@ set_target_properties(HiPACE PROPERTIES
 
 # link dependencies
 target_link_libraries(HiPACE PUBLIC HiPACE::thirdparty::AMReX)
+target_link_libraries(HiPACE PUBLIC PkgConfig::fftw3)
 
 # AMReX helper function: propagate CUDA specific target & source properties
 if(ENABLE_CUDA)
