--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,10 @@ include(${HiPACE_SOURCE_DIR}/cmake/dependencies/AMReX.cmake)
 make_third_party_includes_system(AMReX::amrex AMReX)
 
 # FFTW (non-GPU) and cuFFT (GPU) - or both wrapped via AMReX?
+# external library: FFTW (optional)
+find_package(PkgConfig REQUIRED QUIET)
+pkg_check_modules(fftw3 REQUIRED IMPORTED_TARGET fftw3)
+
 # openPMD-api
 
 
@@ -89,6 +93,7 @@ set_target_properties(HiPACE PROPERTIES
 
 # link dependencies
 target_link_libraries(HiPACE PUBLIC HiPACE::thirdparty::AMReX)
+target_link_libraries(HiPACE PUBLIC PkgConfig::fftw3)
 
 # AMReX helper function: propagate CUDA specific target & source properties
 if(ENABLE_CUDA)
