--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,7 +101,7 @@ endif()
 # AMReX helper function: propagate CUDA specific target & source properties
 if(ENABLE_CUDA)
     setup_target_for_cuda_compilation(HiPACE)
-    target_compile_features(HiPACE PUBLIC cuda_std_14)
+    target_compile_features(HiPACE PUBLIC cxx_std_14)
     set_target_properties(HiPACE PROPERTIES
         CUDA_EXTENSIONS OFF
         CUDA_STANDARD_REQUIRED ON
