--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,11 +104,13 @@ endif()
 # AMReX helper function: propagate CUDA specific target & source properties
 if(ENABLE_CUDA)
     setup_target_for_cuda_compilation(HiPACE)
-    target_compile_features(HiPACE PUBLIC cuda_std_14)
-    set_target_properties(HiPACE PROPERTIES
-        CUDA_EXTENSIONS OFF
-        CUDA_STANDARD_REQUIRED ON
-    )
+    if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.17)
+        target_compile_features(HiPACE PUBLIC cuda_std_14)
+        set_target_properties(HiPACE PROPERTIES
+            CUDA_EXTENSIONS OFF
+            CUDA_STANDARD_REQUIRED ON
+        )
+    endif()
 endif()
 
 
