CMake: HiPACE_MPI
Wrap the last user-facing AMReX option into a HiPACE option. This
reduces confusion and improves consistency further.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -51,7 +51,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -DENABLE_MPI=OFF
+        cmake .. -DHiPACE_MPI=OFF
         make -j 2 VERBOSE=ON
         ctest --output-on-failure
 
