CMake: DPC++, OMP Def., Binary Names
With regards to the `HiPACE_COMPUTE` options the following changes
are introduced:
- default: `OMP` (OpenMP; as in GNUmake and a sensible default for
                  reasonable performance in 2020)
- rename: `NONE` -> `NOACC` (no accelerated computing backend)
- adds: `DPCPP` (for SYCL/Intel DPC++ beta7 or newer)

Furthermore, we encode relevant, user-facing options in our binary
name. The namings are intentionally a bit different now and skip few
options that are verbose and standard. Furthermore, this builds a
`hipace` symlink in `bin/` to the latest build executable (when
switching options), so that repeated compile-and-test workflows do
not need to take care of the executable name anymore.

--- a/.github/workflows/disabled/macos.yml
+++ b/.github/workflows/disabled/macos.yml
@@ -15,7 +15,8 @@ jobs:
         mkdir build
         cd build
         cmake ..                                   \
-            -DCMAKE_INSTALL_PREFIX=/tmp/my-hipace
+            -DCMAKE_INSTALL_PREFIX=/tmp/my-hipace  \
+            -DHiPACE_COMPUTE=NOACC
         make -j 2 VERBOSE=ON
         ctest --output-on-failure
         make install
@@ -32,8 +33,7 @@ jobs:
         mkdir build
         cd build
         cmake ..                                   \
-            -DCMAKE_INSTALL_PREFIX=/tmp/my-hipace  \
-            -DENABLE_OMP=ON
+            -DCMAKE_INSTALL_PREFIX=/tmp/my-hipace
         make -j 2 VERBOSE=ON
         ctest --output-on-failure
         make install
