--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -25,9 +25,6 @@ jobs:
   linux_gcc_cxx17_omp_ompi:
     name: GNU@7.5 C++17 OMP OMPI
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8]
 
     steps:
     - uses: actions/checkout@v2
@@ -46,10 +43,17 @@ jobs:
   linux_gcc_cxx14:
     name: GNU@7.5 C++14 Serial
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+    
     steps:
     - uses: actions/checkout@v2
     - name: Dependencies
       run: .github/workflows/setup/ubuntu.sh
+      with:
+        python-version: ${{ matrix.python-version }}
+
     - name: Build & Install
       run: |
         mkdir build
